# serializer version: 1
# name: test_mustache_prompt_from_template[schema_0]
  dict({
    '$defs': dict({
      'obj': dict({
        'properties': dict({
          'bar': dict({
            'title': 'Bar',
            'type': 'string',
          }),
          'foo': dict({
            'title': 'Foo',
            'type': 'string',
          }),
        }),
        'title': 'obj',
        'type': 'object',
      }),
    }),
    'properties': dict({
      'foo': dict({
        'title': 'Foo',
        'type': 'string',
      }),
      'obj': dict({
        '$ref': '#/$defs/obj',
      }),
    }),
    'title': 'PromptInput',
    'type': 'object',
  })
# ---
# name: test_mustache_prompt_from_template[schema_2]
  dict({
    '$defs': dict({
      'foo': dict({
        'properties': dict({
          'bar': dict({
            'title': 'Bar',
            'type': 'string',
          }),
        }),
        'title': 'foo',
        'type': 'object',
      }),
    }),
    'properties': dict({
      'foo': dict({
        '$ref': '#/$defs/foo',
      }),
    }),
    'title': 'PromptInput',
    'type': 'object',
  })
# ---
# name: test_mustache_prompt_from_template[schema_3]
  dict({
    '$defs': dict({
      'baz': dict({
        'properties': dict({
          'qux': dict({
            'title': 'Qux',
            'type': 'string',
          }),
        }),
        'title': 'baz',
        'type': 'object',
      }),
      'foo': dict({
        'properties': dict({
          'bar': dict({
            'title': 'Bar',
            'type': 'string',
          }),
          'baz': dict({
            '$ref': '#/$defs/baz',
          }),
          'quux': dict({
            'title': 'Quux',
            'type': 'string',
          }),
        }),
        'title': 'foo',
        'type': 'object',
      }),
    }),
    'properties': dict({
      'foo': dict({
        '$ref': '#/$defs/foo',
      }),
    }),
    'title': 'PromptInput',
    'type': 'object',
  })
# ---
# name: test_mustache_prompt_from_template[schema_4]
  dict({
    '$defs': dict({
      'barfoo': dict({
        'properties': dict({
          'foobar': dict({
            'title': 'Foobar',
            'type': 'string',
          }),
        }),
        'title': 'barfoo',
        'type': 'object',
      }),
      'baz': dict({
        'properties': dict({
          'qux': dict({
            '$ref': '#/$defs/qux',
          }),
        }),
        'title': 'baz',
        'type': 'object',
      }),
      'foo': dict({
        'properties': dict({
          'bar': dict({
            'title': 'Bar',
            'type': 'string',
          }),
          'baz': dict({
            '$ref': '#/$defs/baz',
          }),
          'quux': dict({
            'title': 'Quux',
            'type': 'string',
          }),
        }),
        'title': 'foo',
        'type': 'object',
      }),
      'qux': dict({
        'properties': dict({
          'barfoo': dict({
            '$ref': '#/$defs/barfoo',
          }),
          'foobar': dict({
            'title': 'Foobar',
            'type': 'string',
          }),
        }),
        'title': 'qux',
        'type': 'object',
      }),
    }),
    'properties': dict({
      'foo': dict({
        '$ref': '#/$defs/foo',
      }),
    }),
    'title': 'PromptInput',
    'type': 'object',
  })
# ---
# name: test_mustache_prompt_from_template[schema_5]
  dict({
    '$defs': dict({
      'foo': dict({
        'properties': dict({
          'bar': dict({
            'title': 'Bar',
            'type': 'string',
          }),
        }),
        'title': 'foo',
        'type': 'object',
      }),
    }),
    'properties': dict({
      'foo': dict({
        '$ref': '#/$defs/foo',
      }),
    }),
    'title': 'PromptInput',
    'type': 'object',
  })
# ---
